grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:10.4.14
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-dashboard-provider-volume
          mountPath: /etc/grafana/provisioning/dashboards
        - name: grafana-datasource-volume
          mountPath: /etc/grafana/provisioning/datasources
        - name: grafana-storage
          mountPath: /var/lib/grafana  # Default Grafana data path

      volumes:
      - name: grafana-dashboard-provider-volume
        configMap:
          name: grafana-dashboard-provider
      - name: grafana-datasource-volume
        configMap:
          name: grafana-datasources
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
